上传算法部分文档【STL】计算机/编程语言/C++【STL】计算机/编程语言/golang

--- a/src/zh/computer/编程语言/C++/智能指针.md
+++ b/src/zh/computer/编程语言/C++/智能指针.md
@@ -1,3 +1,20 @@
+---
+tittle: 智能指针
+index: true
+date: 2025-03-28
+star: true
+article: true
+category:
+  - auto_ptr
+  - unique_ptr
+  - shared_ptr
+  - weak_ptr
+  - C++
+tag:
+  - 智能指针
+
+---
+
 ## 智能指针的使用及原理
 ### 智能指针的使用
 >内存泄露问题
