上传算法部分文档【STL】计算机/编程语言/C++【STL】计算机/编程语言/golang

--- a/src/zh/computer/编程语言/golang/流程控制.md
+++ b/src/zh/computer/编程语言/golang/流程控制.md
@@ -1,6 +1,7 @@
-## if else(分支结构)
+#  流程控制
+# if else(分支结构)
 
-### if条件判断基本写法
+## if条件判断基本写法
 
 Go语言中`if`条件判断的格式如下：
 
@@ -33,7 +34,7 @@ func ifDemo1() {
 }
 ```
 
-### if条件判断特殊写法
+## if条件判断特殊写法
 
 if条件判断还有一种特殊的写法，可以在 if 表达式之前添加一个执行语句，再根据变量值进行判断，举个例子：
 
@@ -51,7 +52,7 @@ func ifDemo2() {
 
 **思考题：** 上下两种写法的区别在哪里？
 
-## for(循环结构)
+# for(循环结构)
 
 Go 语言中的所有循环类型均可以使用`for`关键字来完成。
 
@@ -98,7 +99,7 @@ func forDemo3() {
 
 这种写法类似于其他编程语言中的`while`，在`while`后添加一个条件表达式，满足条件表达式时持续循环，否则结束循环。
 
-### 无限循环
+## 无限循环
 
 ```go
 for {
@@ -108,7 +109,7 @@ for {
 
 for循环可以通过`break`、`goto`、`return`、`panic`语句强制退出循环。
 
-## for range(键值循环)
+# for range(键值循环)
 
 Go语言中可以使用`for range`遍历数组、切片、字符串、map 及通道（channel）。 通过`for range`遍历的返回值有以下规律：
 
@@ -140,7 +141,7 @@ for range 2 {
 1
 ```
 
-## switch case
+# switch case
 
 使用`switch`语句可方便地对大量的值进行条件判断。
 
@@ -225,7 +226,7 @@ a
 b
 ```
 
-## goto(跳转到指定标签)
+# goto(跳转到指定标签)
 
 `goto`语句通过标签进行代码间的无条件跳转。`goto`语句可以在快速跳出循环、避免重复退出上有一定的帮助。Go语言中使用`goto`语句能简化一些代码的实现过程。 例如双层嵌套的for循环要退出时：
 
@@ -269,7 +270,7 @@ breakTag:
 }
 ```
 
-## break(跳出循环)
+##break(跳出循环)
 
 `break`语句可以结束`for`、`switch`和`select`的代码块。
 
@@ -290,7 +291,7 @@ BREAKDEMO1:
 }
 ```
 
-## continue(继续下次循环)
+# continue(继续下次循环)
 
 `continue`语句可以结束当前循环，开始下一次的循环迭代过程，仅限在`for`循环内使用。
 
