--- a/src/zh/computer/编程语言/C++/智能指针.md
+++ b/src/zh/computer/编程语言/C++/智能指针.md
@@ -14,9 +14,9 @@ tag:
   - 智能指针
 
 ---
-
-## 智能指针的使用及原理
-### 智能指针的使用
+# 智能指针
+# 智能指针的使用及原理
+## 智能指针的使用
 >内存泄露问题
 
 内存泄露是指因为疏忽或错误，造成程序未能释放已经不再使用的内存的情况。比如：
@@ -153,7 +153,7 @@ int main()
 - 此外，为了让`SmartPtr`对象能够像原生指针一样使用，还需要对`*`和`->`运算符进行重载。
 这样一来，无论程序是正常执行完毕返回了，还是因为某些原因中途返回了，或是因为抛异常返回了，只要`SmartPtr`对象的生命周期结束就会调用其对应的析构函数，进而完成内存资源的释放。
 
-### 智能指针的原理
+## 智能指针的原理
 
 实现智能指针时需要考虑以下三个方面的问题：
 
@@ -184,8 +184,8 @@ int main()
 - 编译器默认生成的拷贝赋值函数对内置类型也是完成值拷贝（浅拷贝），因此将`sp4`赋值给`sp3`后，相当于`sp3`和`sp4`管理的都是原来`sp3`管理的空间，当`sp3`和`sp4`析构时就会导致这块空间被释放两次，并且还会导致`sp4`原来管理的空间没有得到释放。
 需要注意的是，智能指针就是要模拟原生指针的行为，当我们将一个指针赋值给另一个指针时，目的就是让这两个指针指向同一块内存空间，所以这里本就应该进行浅拷贝，但单纯的浅拷贝又会导致空间被多次释放，因此根据解决智能指针拷贝问题方式的不同，从而衍生出了不同版本的智能指针。
 
-## C++中的智能指针
-### std::auto_ptr
+# C++中的智能指针
+## std::auto_ptr
 >管理权转移
 
 `auto_ptr`是`C++98`中引入的智能指针，`auto_ptr`通过管理权转移的方式解决智能指针的拷贝问题，保证一个资源在任何时刻都只有一个对象在对其进行管理，这时同一个资源就不会被多次释放了。比如：
@@ -323,8 +323,8 @@ namespace cl
 }
 ```
 
-### std::shared_ptr
-#### std::shared_ptr的基本设计
+## std::shared_ptr
+### std::shared_ptr的基本设计
 >引用计数
 
 `shared_ptr`是`C++11`中引入的智能指针，`shared_ptr`通过引用计数的方式解决智能指针的拷贝问题。
@@ -351,7 +351,7 @@ int main()
 ```
 **说明一下**： `use_count`成员函数，用于获取当前对象管理的资源对应的引用计数。
 
-#### shared_ptr的模拟实现
+### shared_ptr的模拟实现
 
 简易版的`shared_ptr`的实现步骤如下：
 
@@ -451,7 +451,7 @@ namespace cl
 
 5. 但同时需要注意，由于引用计数的内存空间也是在堆上开辟的，因此当一个资源对应的引用计数减为0时，除了需要将该资源释放，还需要将该资源对应的引用计数的内存空间进行释放。
 
-#### std::shared_ptr的线程安全问题
+### std::shared_ptr的线程安全问题
 >shared_ptr的线程安全问题
 
 当前模拟实现的`shared_ptr`还存在线程安全的问题，由于管理同一个资源的多个对象的引用计数是共享的，因此多个线程可能会同时对同一个引用计数进行自增或自减操作，而自增和自减操作都不是原子操作，因此需要通过加锁来对引用计数进行保护，否则就会导致线程安全问题。
@@ -585,7 +585,7 @@ namespace cl
 
 在`ReleaseRef`函数中，当引用计数被减为`0`时需要释放互斥锁资源，但不能在临界区中释放互斥锁，因为后面还需要进行解锁操作，因此代码中借助了一个`flag`变量，通过`flag`变量来判断解锁后释放需要释放互斥锁资源。
 `shared_ptr`只需要保证引用计数的线程安全问题，而不需要保证管理的资源的线程安全问题，就像原生指针管理一块内存空间一样，原生指针只需要指向这块空间，而这块空间的线程安全问题应该由这块空间的操作者来保证。
-#### std::shared_ptr的定制删除器
+### std::shared_ptr的定制删除器
 >定制删除器的用法
 
 当智能指针对象的生命周期结束时，所有的智能指针默认都是以`delete`的方式将资源释放，这是不太合适的，因为智能指针并不是只管理以`new`方式申请到的内存空间，智能指针管理的也可能是以`new[]`的方式申请到的空间，或管理的是一个文件指针。比如：
@@ -744,8 +744,8 @@ int main()
 }
 ```
 
-### std::weak_ptr
-#### std::shared_ptr的循环引用问题
+## std::weak_ptr
+### std::shared_ptr的循环引用问题
 > 循环引用问题
 
 `shared_ptr`的循环引用问题在一些特定的场景下才会产生。比如定义如下的结点类，并在结点类的析构函数中打印一句提示语句，便于判断结点是否正确释放。
@@ -820,7 +820,7 @@ int main()
 而`Node1`当中的`next`成员的释放又取决于`Node1`，`Node2`当中的`_prev`成员的释放又取决于`Node2`，于是这就变成了一个死循环，最终导致资源无法释放。
 而如果连接结点时只进行一个连接操作，那么当`node1`和`node2`的生命周期结束时，就会有一个资源对应的引用计数被减为0，此时这个资源就会被释放，这个释放后另一个资源的引用计数也会被减为0，最终两个资源就都被释放了，这就是为什么只进行一个连接操作时这两个结点就都能够正确释放的原因。
 
-#### std::weak_ptr解决循环引用问题
+### std::weak_ptr解决循环引用问题
 >解决循环引用问题
 
 `weak_ptr`是`C++11`中引入的智能指针，`weak_ptr`不是用来管理资源的释放的，它主要是用来解决`shared_ptr`的循环引用问题的。
